--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       imageUrl:
         'http://k.kakaocdn.net/dn/Q2iNx/btqgeRgV54P/VLdBs9cvyn8BJXB3o7N8UK/kakaolink40_original.png',
       link: {
-        mobileWebUrl: 'https://pro-gp.github.com',
-        webUrl: 'https://testidforwork.github.com',
+        mobileWebUrl: 'https://pro-gp.github.io',
+        webUrl: 'https://testidforwork.github.io',
       },
     },
     social: {
@@ -61,15 +61,15 @@
       {
         title: '웹으로 보기',
         link: {
-        mobileWebUrl: 'https://pro-gp.github.com',
-        webUrl: 'https://testidforwork.github.com',
+        mobileWebUrl: 'https://pro-gp.github.io',
+        webUrl: 'https://testidforwork.github.io',
         },
       },
       {
         title: '앱으로 보기',
         link: {
-        mobileWebUrl: 'https://pro-gp.github.com',
-        webUrl: 'https://testidforwork.github.com',
+        mobileWebUrl: 'https://pro-gp.github.io',
+        webUrl: 'https://testidforwork.github.io',
         },
       },
     ],
