--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       {
         title: '웹으로 보기',
         link: {
-        mobileWebUrl: 'https://pro-gp.github.io',
-        webUrl: 'https://testidforwork.github.io',
+        mobileWebUrl: 'https://testidforwork.github.io',
+        webUrl: 'https://pro-gp.github.io',
         },
       },
       {
